# paddleocr-deploy-hps

./: API_DOC.md  README.md  README_cn.md
Ocr2TextAgent/: .env.example  README.md  main.py  pyproject.toml
Ocr2TextAgent/core/: agent.py
Ocr2TextAgent/tools/: base.py  paddleocr_vl.py  pp_ocrv5.py  pp_structurev3.py
Ocr2TextAgent/utils/: file_utils.py
PP-OCRv5/: API.md
PP-OCRv5-Web/: README.md  cors_proxy.py  index.html  请求参数.md
PP-OCRv5-Web/css/: components.css  main.css
PP-OCRv5-Web/js/: api.js  app.js  params.js  results.js
PP-OCRv6/: README.md  README_cn.md  compose.yml  gateway.Dockerfile  test_ocr_api.py  tritonserver.Dockerfile
PP-StructureV3/: API.md  tritonserver.Dockerfile
PP-StructureV3-Web/: README.md  cors_proxy.py  index.html  请求参数.md
PP-StructureV3-Web/css/: components.css  main.css
PP-StructureV3-Web/js/: api.js  app.js  params.js  results.js
PP-StructureV3/paddlex_hps_PP-StructureV3_sdk/server/: pipeline_config.yaml
PaddleOCR-VL/: .env.example  README.md  README_ch.md  compose.yaml  gateway.Dockerfile  tritonserver.Dockerfile
PaddleOCR-VL-Web/: PaddleOCR-VL服务化客户端调用API参考.md  README.md  cors_proxy.py  index.html  请求参数.md
PaddleOCR-VL-Web/css/: components.css  main.css
PaddleOCR-VL-Web/js/: api.js  app.js  params.js  relay.js  results.js
PaddleOCR-VL/gateway/: app.py
PaddleOCR-VL/paddlex_hps_PaddleOCR-VL-1.6_sdk/client/: paddlex_hps_client-0.3.0-py3-none-any.whl
PaddleOCR-VL/paddlex_hps_PaddleOCR-VL-1.6_sdk/server/: pipeline_config.yaml
(+1 files in other folders)
